Backend Node.js avec Stripe - montants dynamiques comme Cinnadmoun

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,28 @@
-# Stripe Keys (à obtenir sur https://dashboard.stripe.com/apikeys)
-STRIPE_PUBLISHABLE_KEY=pk_test_your_key_here
+# ===================================================
+# Configuration Backend QRGUIDE (pour server.js)
+# ===================================================
+# 
+# IMPORTANT : Copiez ce fichier en ".env" et remplissez vos vraies valeurs
+# Ne commitez JAMAIS le fichier .env sur GitHub !
+#
 
-# EmailJS Configuration (à obtenir sur https://www.emailjs.com/)
-EMAILJS_SERVICE_ID=your_service_id
-EMAILJS_TEMPLATE_ID=your_template_id
-EMAILJS_PUBLIC_KEY=your_public_key
+# ===========================
+# STRIPE - Backend uniquement
+# ===========================
+# Clé secrète Stripe (récupérez-la sur https://dashboard.stripe.com/test/apikeys)
+STRIPE_SECRET_KEY=sk_test_VOTRE_CLE_SECRETE_ICI
 
-# Stripe Product/Price IDs (à créer sur Stripe Dashboard)
-STRIPE_PRICE_MENSUEL=price_mensuel_id
-STRIPE_PRICE_ANNUEL=price_annuel_id
-STRIPE_PRICE_CREATION=price_creation_id
-STRIPE_PRICE_PLAQUE=price_plaque_id
-STRIPE_PRICE_PACK_COMPLET=price_pack_complet_id
+# Port du serveur (Render.com utilise automatiquement process.env.PORT)
+PORT=3000
+
+# Webhook secret (optionnel - pour recevoir les confirmations de paiement)
+# STRIPE_WEBHOOK_SECRET=whsec_VOTRE_WEBHOOK_SECRET
+
+# ===========================
+# NOTE : Plus besoin de Price IDs !
+# ===========================
+# Le backend calcule automatiquement :
+# - Pack Création : 150€
+# - Mensuel : 8€
+# - Annuel : 75€
+# - Plaque QR : 45€ chacune
