Email automatique confirmation + Guide abonnements récurrents Stripe

--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,17 @@ STRIPE_SECRET_KEY=sk_test_VOTRE_CLE_SECRETE_ICI
 # Port du serveur (Render.com utilise automatiquement process.env.PORT)
 PORT=3000
 
-# Webhook secret (optionnel - pour recevoir les confirmations de paiement)
-# STRIPE_WEBHOOK_SECRET=whsec_VOTRE_WEBHOOK_SECRET
+# Webhook secret (pour recevoir les confirmations de paiement et envoyer email auto)
+STRIPE_WEBHOOK_SECRET=whsec_VOTRE_WEBHOOK_SECRET
+
+# ===========================
+# EMAIL - Pour envoi automatique
+# ===========================
+# Email Gmail pour envoyer les confirmations
+EMAIL_USER=votre-email@gmail.com
+# Mot de passe d'application Gmail (pas votre mot de passe normal !)
+# Créer un mot de passe d'application : https://myaccount.google.com/apppasswords
+EMAIL_PASSWORD=votre-mot-de-passe-application-16-caracteres
 
 # ===========================
 # NOTE : Plus besoin de Price IDs !
