Passage à Resend + Mode subscription pour abonnements récurrents

--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,18 @@ PORT=3000
 STRIPE_WEBHOOK_SECRET=whsec_VOTRE_WEBHOOK_SECRET
 
 # ===========================
-# EMAIL - Pour envoi automatique
+# RESEND - Pour envoi automatique d'emails
 # ===========================
-# Email Gmail pour envoyer les confirmations
-EMAIL_USER=votre-email@gmail.com
-# Mot de passe d'application Gmail (pas votre mot de passe normal !)
-# Créer un mot de passe d'application : https://myaccount.google.com/apppasswords
-EMAIL_PASSWORD=votre-mot-de-passe-application-16-caracteres
+# Clé API Resend (récupérez-la sur https://resend.com/api-keys)
+RESEND_API_KEY=re_VOTRE_CLE_RESEND_ICI
+
+# ===========================
+# STRIPE PRICE IDS (abonnements récurrents)
+# ===========================
+# Price ID pour abonnement mensuel (8€/mois)
+STRIPE_PRICE_MENSUEL=price_1SfjUQIuJcG0yZsyQmc6oFBE
+# Price ID pour abonnement annuel (75€/an)
+STRIPE_PRICE_ANNUEL=price_VOTRE_PRICE_ANNUEL_ICI
 
 # ===========================
 # NOTE : Plus besoin de Price IDs !
