--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "stripe": "^14.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7"
+    "resend": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
