Migration vers EmailJS pour emails gratuits

--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,13 @@ PORT=3000
 STRIPE_WEBHOOK_SECRET=whsec_VOTRE_WEBHOOK_SECRET
 
 # ===========================
-# RESEND - Pour envoi automatique d'emails
+# EMAILJS - Pour envoi automatique d'emails (GRATUIT 200/mois)
 # ===========================
-# Clé API Resend (récupérez-la sur https://resend.com/api-keys)
-RESEND_API_KEY=re_VOTRE_CLE_RESEND_ICI
+# Récupérez ces valeurs sur https://dashboard.emailjs.com
+EMAILJS_PUBLIC_KEY=VOTRE_PUBLIC_KEY
+EMAILJS_PRIVATE_KEY=VOTRE_PRIVATE_KEY
+EMAILJS_SERVICE_ID=VOTRE_SERVICE_ID
+EMAILJS_TEMPLATE_ID=VOTRE_TEMPLATE_ID
 
 # ===========================
 # STRIPE PRICE IDS (abonnements récurrents)
