--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express": "^4.18.2",
     "stripe": "^14.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "resend": "^3.0.0"
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
