--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "stripe": "^14.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
